Closed Bug 1181152 Opened 9 years ago Closed 9 years ago

IonMonkey MIPS: Trampoline-mips.cpp is not compilable on clang.

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
firefox42 --- fixed

People

(Reporter: arai, Assigned: arai)

Details

Attachments

(1 file)

same fix as bug 1148880 is needed for MIPS.

> /Users/arai/projects/mozilla-central/js/src/jit/mips/Trampoline-mips.cpp:699:76: error: parameter declarator cannot be
>       qualified
>     AllocatableGeneralRegisterSet regs(GeneralRegisterSet(Register::Codes::WrapperMask));
>                                                           ~~~~~~~~~~~~~~~~~^
Summary: IonMonkey MIPS: → IonMonkey MIPS: Trampoline-mips.cpp is not compilable on clang.
Green on try run: https://treeherder.mozilla.org/#/jobs?repo=try&revision=82b37d7cd375
Assignee: nobody → arai.unmht
Attachment #8630605 - Flags: review?(branislav.rankov)
Attachment #8630605 - Flags: review?(branislav.rankov) → review+
https://hg.mozilla.org/mozilla-central/rev/7131f6a77e73
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: