Bug 1181152 - Make Trampoline-mips.cpp compile with clang. r=rankov